tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__FoodVariants-AAAAAAAAAAAAAAAAAAAB1w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 471,
  "prerequisites": [
    442
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Maybe you noticed already that eating the same food too often is very boring and not healthy anymore. Some food like tea leaf can be taken to the furnace and processed further. So take a break and drink a cup of tea. Maybe munch some tasty raisins as they are very nice.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lFood Variants",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    442
  ],
  "rewards": [],
  "tasks": []
}
