tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__Goals-AAAAAAAAAAAAAAAAAAABjA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 396,
  "prerequisites": [
    13
  ],
  "properties": {
    "auto_claim": false,
    "desc": "GregTech New Horizons is a long and intricate mod pack with massive amounts of custom content and over three thousand quests to guide you through it.\n\nWe recommend you set yourself small goals from tier to tier and see how far your journey takes you.\n\nThe ultimate late game goal is to craft a Stargate or two, but the recipe is outrageous, and very few players have ever done so.\n\nIf you need a big goal for your run, we suggest to aim for something less crazy.\nLike going to the moon if it's your first time playing.\nOr making and automating an Assembly Line if you have never done so.\nOr crafting the Tier 8 Rocket which is the last regular rocket and is reached in UHV.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lGoals",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13
  ],
  "rewards": [],
  "tasks": []
}
