tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__LoadingtheChunks-AAAAAAAAAAAAAAAAAAALOg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2874,
  "prerequisites": [
    0
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Minecraft works in chunks - the 16x16 columns of blocks from bedrock to sky. The chunks in a radius around you are simulated or, in other words, chunkloaded. If a chunk is not loaded, nothing happens in it - crops don't grow, machines don't work. Thus, you want to have your base chunkloaded when you're off exploring. Later on, you want your base chunkloaded so things don't spontaneously blow up, especially multi-block machines.\n\nYou can chunkload in a few ways:\n\n1) The ServerUtilities mod. With default settings, you will not be able to chunkload. Feel free to change that in the config if you are in singleplayer (SP) or running your own server.\n\n2) Use four types of Anchors from Railcraft, although they are not craftable until the Low Voltage (LV) tier. In SP, or a server you run, cheat in Admin Anchors to chunkload forever, for free. They're limited on servers to prevent TPS dropping from people chunkloading a base forever when they aren't even there. On the officials, you need to use Ender Fragments, Ender Pearls, or Coins to fuel them. Look at the tooltip on each for how long it will work, and in what chunkloader.\n\n3) Use one of the blocks that chunkloads itself. If you do this on a server, expect the admins to possibly get very mad at you if it's not something you're allowed to do. Same for vanilla methods.\n\nDon't use chicken chunks to get anchor-like blocks. It's buggy.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lLoading the Chunks",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "UNLOCKED"
  },
  "required_prerequisites": [
    0
  ],
  "rewards": [],
  "tasks": []
}
