tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__MonsterTrap-AAAAAAAAAAAAAAAAAAADYQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 865,
  "prerequisites": [
    3
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you're lucky enough to spawn near a sand- or rainforest biome, you can find some quicksand.\n\nCollect a stack of it, dig a small ditch, and fill it with the quicksand to protect your \"dirt base\" home. Just don't fall in!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lMonster Trap",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3
  ],
  "rewards": [],
  "tasks": []
}
