tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__PermanentOffhand-U7JoxM0mRaWx0MYriD2LtQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 14782579404147887029,
  "prerequisites": [
    0
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With the release of version 2.8 of GTNH, the modern offhand slot has been backported and is available for every player. \n\nWith this, we say goodbye to the Battlegear slots of before. The three slots on either side of your hotbar, default key \"G\", are no longer!\n\nThis feature also works with any item that opens a GUI, like a backpack for example. This makes inventory management easier and helps with certain tedious tasks.\n\nDefault Keybind to swap between mainhand and offhand: §9F§r\n\n[warn]Any items that were in the Battlegear slots should return to your inventory or dropped on the ground if your inventory is full.[/warn]\n\n[note]You can also toggle various Torch Tweaks in Backhand's mod client configs. They are disabled by default, but you may find them useful if you love holding torches in your offhand.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lPermanent Offhand!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    0
  ],
  "rewards": [],
  "tasks": []
}
