tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__PorkchopsWithAtt-AAAAAAAAAAAAAAAAAAAHNA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1844,
  "prerequisites": [
    1843
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The only zombie pigman to watch out for is the Vampire Pigman. He hardly takes any damage unless you use a wooden sword as a stake, or have a magical sword.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lPorkchops With Attitude",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1843
  ],
  "rewards": [],
  "tasks": []
}
