tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__SOTIREDMUSTSLEEP-AAAAAAAAAAAAAAAAAAAADQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 13,
  "prerequisites": [
    12,
    444
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Sleepy time, and the end of the tutorial.\n\nCongratulations! You've built your first hideout, and you should have a steady supply of food by now.\n\nSee you again in Tier 0!\n\n[note](Any color bed will complete this quest)[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§9§lSO...TIRED...MUST...SLEEP...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12,
    444
  ],
  "rewards": [],
  "tasks": []
}
