tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__StayingCoolinthe-AAAAAAAAAAAAAAAAAAAHQA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1856,
  "prerequisites": [
    469,
    444
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you happen to be near a snowy biome, you can harvest the snow to make delicious smoothies. They are more satiating than eating the berries by themselves.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lStaying Cool in the Heat",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    469,
    444
  ],
  "rewards": [],
  "tasks": []
}
